--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/the-elite-three/qna-service#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-sanitizer": "^1.0.5",
     "htmlencode": "0.0.4",
