--- a/package.json
+++ b/package.json
@@ -26,5 +26,7 @@
     "sanitizer": "^0.1.3",
     "underscore": "^1.9.1"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "newrelic": "^5.11.0"
+  }
 }
